finished responsive design

--- a/src/sections/footer/footer.html
+++ b/src/sections/footer/footer.html
@@ -11,27 +11,27 @@
 
       <div class="footer__icon-wrapper" data-reveal>
         <div class="footer__icon" data-href="https://github.com/Gearonix">
-          <img src="_static/images/icons/github.svg"></div>
+          <img src="_static/images/icons/github.svg" alt=""></div>
         <div class="footer__icon" data-href="https://t.me/gearonixx">
-          <img src="_static/images/icons/telegram.svg"></div>
+          <img src="_static/images/icons/telegram.svg" alt=""></div>
         <div class="footer__icon" data-href="https://wa.me/80264942003">
-          <img src="_static/images/icons/whatsapp.svg"></div>
+          <img src="_static/images/icons/whatsapp.svg" alt=""></div>
         <div class="footer__icon" data-href="https://vk.com/id606417601">
-          <img src="_static/images/icons/vk.svg">
+          <img src="_static/images/icons/vk.svg" alt="">
         </div>
       </div>
 
       <img src="_static/images/people/hero-guy-5.png" width="159" height="176"
-           class="abs-img abs-img-1" data-reveal>
+           class="abs-img abs-img-1" data-reveal alt="">
 
       <img src="_static/images/people/hero-guy-2.png" width="265" height="275"
-           class="abs-img abs-img-2" data-reveal>
+           class="abs-img abs-img-2" data-reveal alt="">
 
       <img src="_static/images/people/hero-guy-3.png" width="303" height="272"
-           class="abs-img abs-img-3" data-reveal>
+           class="abs-img abs-img-3" data-reveal alt="">
 
       <img src="_static/images/people/hero-guy-1.png" width="175" height="175"
-           class="abs-img abs-img-4" data-reveal>
+           class="abs-img abs-img-4" data-reveal alt="">
 
     </div>
   </div>
@@ -39,7 +39,7 @@
   <div class="footer__bottom">
     <div class="container">
       <a data-href="#home" class="logo">
-        <img height="40" loading="lazy" src="_static/images/logo/logo-dark.png" width="40">
+        <img height="40" loading="lazy" src="_static/images/logo/logo-dark.png" width="40" alt="Logo">
       </a>
 
       <ul class="footer__social-list">
