--- a/src/sections/header/header.html
+++ b/src/sections/header/header.html
@@ -2,21 +2,21 @@
   <div class="container">
 
     <a data-href="#home" class="logo">
-      <img src="_static/images/logo/logo-dark.png">
+      <img src="_static/images/logo/logo-dark.png" alt="Logo">
     </a>
 
     <div class="header__buttons">
       <button class="header__btn" aria-label="open menu" data-href="#portfolio">
-        <img src="_static/images/icons/link.svg">
+        <img src="_static/images/icons/link.svg" alt="Portfolio">
       </button>
       <button class="header__btn" aria-label="open menu" data-href="https://t.me/gearonixx">
-        <img src="_static/images/icons/telegram.svg">
+        <img src="_static/images/icons/telegram.svg" alt="Telegram">
       </button>
       <button class="header__btn" aria-label="open menu" data-href="https://github.com/Gearonix">
-        <img src="_static/images/icons/github.svg">
+        <img src="_static/images/icons/github.svg" alt="Github">
       </button>
       <button class="header__btn" data-nav-open>
-        <img src="_static/images/icons/menu.svg">
+        <img src="_static/images/icons/menu.svg" alt="Menu">
       </button>
     </div>
   </div>
