--- a/src/sections/main/main.html
+++ b/src/sections/main/main.html
@@ -9,31 +9,28 @@
 
       <div class="wrapper h2" data-first-reveal="left">
         <strong class="strong" data-letter-effect>Frontend</strong>
-        <strong class="strong" data-letter-effect>Javascript</strong>
-        <strong class="strong" data-letter-effect>React.js</strong>
-        <strong class="strong" data-letter-effect>Next.js</strong>
-        <strong class="strong" data-letter-effect>Testing</strong>
-        <strong class="strong" data-letter-effect>Typescript</strong>
+        <strong class="strong" data-letter-effect>Backend</strong>
+        <strong class="strong" data-letter-effect>Web Design</strong>
       </div>
 
       <p class="main__text" data-first-reveal="opacity">Web developer</p>
     </div>
     <div class="main__contacts" data-first-reveal="left">
       <div class="main__contact" data-href="https://github.com/Gearonix">
-        <img src="_static/images/icons/github.svg"/>
+        <img src="_static/images/icons/github.svg" alt="Github"/>
         <h4>Gearonix</h4>
       </div>
 
       <div class="main__contact" data-href="https://t.me/gearonixx">
-        <img src="_static/images/icons/telegram.svg"/>
+        <img src="_static/images/icons/telegram.svg" alt="Telegram"/>
         <h4>@gearonixx</h4>
       </div>
       <div class="main__contact" data-href="mailto://egor.uzhanin@gmail.com">
-        <img src="_static/images/icons/email.svg"/>
+        <img src="_static/images/icons/email.svg" alt="Email"/>
         <h4>egor.uzhanin@gmail.com</h4>
       </div>
       <div class="main__contact" data-href="https://vk.com/id606417601">
-        <img src="_static/images/icons/vk.svg"/>
+        <img src="_static/images/icons/vk.svg" alt="Vk"/>
         <h4>Uzhanin Egor</h4>
       </div>
 
