--- a/src/sections/navbar/navbar.html
+++ b/src/sections/navbar/navbar.html
@@ -6,7 +6,7 @@
         </a>
 
         <button class="navbar__close" data-nav-close>
-            <img src="_static/images/icons/cross.svg">
+            <img src="_static/images/icons/cross.svg" alt="Close">
         </button>
     </div>
     <ul class="navbar__links">
