--- a/src/sections/portfolio/portfolio.html
+++ b/src/sections/portfolio/portfolio.html
@@ -13,7 +13,7 @@
                         <p>FullStack e-commerce app build on Next.js/Nest.js</p>
                     </div>
                     <div class="portfolio__card-github" data-href="https://github.com/Gearonix/Adonis-Ecommerce">
-                            <img src="_static/images/icons/github.svg">
+                            <img src="_static/images/icons/github.svg" alt="Github">
                     </div>
                 </div>
                 <div class="portfolio__card-block" data-reveal="right">
@@ -32,7 +32,7 @@
                             complete understanding of the project!
                         </p>
                         <div class="portfolio__card-time">
-                            <img src="_static/images/icons/clock.svg">
+                             <img src="_static/images/icons/clock.svg" alt="Clock">
                             <span>3 months</span>
                         </div>
                     </div>
@@ -56,10 +56,10 @@
                     </div>
                     <div class="portfolio__card-icons">
                         <div class="portfolio__card-icon" data-href="https://github.com/Gearonix/Adonis-Ecommerce">
-                            <img src="_static/images/icons/github.svg">
+                            <img src="_static/images/icons/github.svg" alt="Github">
                         </div>
                         <div class="portfolio__card-icon" data-href="adonis-ecommerce">
-                            <img src="_static/images/icons/link.svg">
+                            <img src="_static/images/icons/link.svg" alt="Portfolio">
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                     <h5 class="portfolio__card-subtitle">FullStack Project</h5>
                     <h3 class="portfolio__card-title">Space Calendar</h3>
                     <div class="portfolio__card-description" data-href="https://github.com/Gearonix/Space-Calendar">
-                        <p>
+                        <p>f
                             <em>Calendar</em> with the ability to plan your day
                             built on <em>React.js</em>/<em>Express.js</em>.
                             There is support for <em>two languages</em>, authorization,
@@ -78,7 +78,7 @@
                             animations. My first full stack project.
                         </p>
                         <div class="portfolio__card-time">
-                            <img src="_static/images/icons/clock.svg">
+                            <img src="_static/images/icons/clock.svg" alt="Clock">
                             <span>1 month</span>
                         </div>
                     </div>
@@ -95,10 +95,10 @@
                     </div>
                     <div class="portfolio__card-icons">
                         <div class="portfolio-card-icon" data-href="https://github.com/Gearonix/Space-Calendar">
-                            <img src="_static/images/icons/github.svg">
+                            <img src="_static/images/icons/github.svg" alt="">
                         </div>
                         <div class="portfolio-card-icon" data-href="space-calendar">
-                            <img src="_static/images/icons/link.svg">
+                            <img src="_static/images/icons/link.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -109,14 +109,14 @@
                         <p>Calendar with the ability to plan your day.</p>
                     </div>
                     <div class="portfolio__card-github" data-href="https://github.com/Gearonix/Space-Calendar">
-                            <img src="_static/images/icons/github.svg">
+                            <img src="_static/images/icons/github.svg" alt="">
                     </div>
                 </div>
             </div>
 
         </div>
         <div class="portfolio__addon-eye" data-reveal>
-            <div class="eye">
+            <div class="eye green">
                 <div class="eye__wrapper" data-eye>
                     <div class="eye__iris green">
                         <div class="eye__lens"></div>
@@ -125,7 +125,7 @@
             </div>
         </div>
         <div class="portfolio__addon-guy" data-reveal>
-            <img src="_static/images/people/hero-guy-4.png">
+            <img src="_static/images/people/hero-guy-4.png" alt="">
         </div>
     </div>
 
