--- a/src/sections/skills/skills.html
+++ b/src/sections/skills/skills.html
@@ -2,7 +2,7 @@
   <div class="container">
       <h2 class="h2 section-title" data-reveal>My Skills</h2>
       <p class="section-description" data-reveal>I have been studying web development for over a year. <br/>
-          During this time I have used a large number of  <br/> different technologies.</p>
+          During this time I have learned a lot of technologies.</p>
       <div class="skills__wrapper">
           <div class="skills__wrapper-section">
               <h4 class="skills__wrapper-title" data-reveal>Main Tech Stack:</h4>
@@ -59,7 +59,7 @@
               </div>
           </div>
           <div class="skills__wrapper-section" data-reveal>
-              <img src="_static/images/skills.png">
+              <img src="_static/images/skills.png" alt="Skills">
           </div>
       </div>
       <div class="skills__addon-eye" data-reveal>
