--- a/src/sections/about/about.html
+++ b/src/sections/about/about.html
@@ -12,11 +12,13 @@
       <div class="wrapper has-before" data-reveal="right">
 
         <p class="section-text">
-          I'm a self-taught <em class="em">Front-End Developer</em>
+          I'm a self-taught <em class="em">Front-End Developer</em> <br/>
           located in <em class="em">Moscow</em> region. Creating scalable,<br/>
-          performance optimized <em class="em">web applications</em> <br/>
-          and some other cool stuff for web with good UX and modern standards. <br/>
-          Use <em class="em">modern tech</em> such as Next.js, Typescript, Styled-Components.
+          beautiful <em class="em">web applications</em> <br/>
+          and some other cool stuff for web with good UX and modern standards.
+          <br/>
+          Use <em class="em">modern technologies</em> such as Next.js, Typescript,
+          Styled-Components and more.
         </p>
 
       </div>
@@ -27,7 +29,7 @@
 
       <div class="img-holder has-before" style="--width: 900; --height: 600;">
         <img class="img-cover"
-             src="_static/images/about.png">
+             src="_static/images/about.png" alt="About">
       </div>
     </figure>
   </div>
