--- a/src/sections/skills/skills.html
+++ b/src/sections/skills/skills.html
@@ -7,16 +7,19 @@
           <div class="skills__wrapper-section">
               <h4 class="skills__wrapper-title" data-reveal>Main Tech Stack:</h4>
               <div class="skills__wrapper-block" data-reveal>
-                  <div class="skills__wrapper-icon">Next.js</div>
                   <div class="skills__wrapper-icon">React.js</div>
+                  <div class="skills__wrapper-icon">Next.js</div>
                   <div class="skills__wrapper-icon">Typescript</div>
-                  <div class="skills__wrapper-icon">GitHub</div>
+                  <div class="skills__wrapper-icon">Git</div>
                   <div class="skills__wrapper-icon">Redux</div>
+                  <div class="skills__wrapper-icon">Mobx</div>
               </div>
               <h4 class="skills__wrapper-title" data-reveal>Testing, Linting, Bundlers:</h4>
               <div class="skills__wrapper-block" data-reveal>
                   <div class="skills__wrapper-icon">Webpack</div>
                   <div class="skills__wrapper-icon">Gulp</div>
+                  <div class="skills__wrapper-icon">Vite</div>
+                  <div class="skills__wrapper-icon">ESBuild</div>
                   <div class="skills__wrapper-icon">Jest</div>
                   <div class="skills__wrapper-icon">Loki</div>
                   <div class="skills__wrapper-icon">RTL</div>
@@ -28,6 +31,7 @@
               <h4 class="skills__wrapper-title" data-reveal>CSS and Stylization:</h4>
               <div class="skills__wrapper-block" data-reveal>
                   <div class="skills__wrapper-icon">SCSS</div>
+                  <div class="skills__wrapper-icon">LESS</div>
                   <div class="skills__wrapper-icon">Responsive</div>
                   <div class="skills__wrapper-icon">JSS</div>
                   <div class="skills__wrapper-icon">Styled Comp.</div>
@@ -48,6 +52,9 @@
               </div>
                   <h4 class="skills__wrapper-title" data-reveal>I had experience with:</h4>
               <div class="skills__wrapper-block" data-reveal>
+                  <div class="skills__wrapper-icon">Vue.js</div>
+                  <div class="skills__wrapper-icon">Nuxt.js</div>
+                  <div class="skills__wrapper-icon">Vue X</div>
                   <div class="skills__wrapper-icon">Nest.js</div>
                   <div class="skills__wrapper-icon">MongoDB</div>
                   <div class="skills__wrapper-icon">MySQL</div>
@@ -56,6 +63,10 @@
                   <div class="skills__wrapper-icon">Apollo</div>
                   <div class="skills__wrapper-icon">GraphQL</div>
                   <div class="skills__wrapper-icon">RTK Query</div>
+                  <div class="skills__wrapper-icon">WebRTC</div>
+                  <div class="skills__wrapper-icon">Nx</div>
+                  <div class="skills__wrapper-icon">PWA</div>
+                  <div class="skills__wrapper-icon">Remix</div>
               </div>
           </div>
           <div class="skills__wrapper-section" data-reveal>
