added new project

--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,18 @@
 
 <body class="active" id="top">
   <div id="root">
-    @@include('preloader/preloader.html')
-    @@include('header/header.html')
-    @@include('navbar/navbar.html')
+    @@include('sections/preloader/preloader.html')
+    @@include('sections/header/header.html')
+    @@include('sections/navbar/navbar.html')
     <main>
       <article>
-        @@include('main/main.html')
+        @@include('sections/main/main.html')
       </article>
     </main>
-    @@include('about/about.html')
-    @@include('skills/skills.html')
-    @@include('portfolio/portfolio.html')
-    @@include('footer/footer.html')
+    @@include('sections/about/about.html')
+    @@include('sections/skills/skills.html')
+    @@include('sections/portfolio/portfolio.html')
+    @@include('sections/footer/footer.html')
     <a class="back-top-btn" data-back-top-btn data-href="#home">0%</a>
 
     <div class="cursor disabled" data-cursor></div>
