--- a/src/sections/main/main.html
+++ b/src/sections/main/main.html
@@ -9,7 +9,7 @@
 
       <div class="wrapper h2" data-first-reveal="left">
         <strong class="strong" data-letter-effect>Frontend</strong>
-        <strong class="strong" data-letter-effect>Web Dev</strong>
+        <strong class="strong" data-letter-effect>Developer</strong>
       </div>
 
       <p class="main__text" data-first-reveal="opacity">Web developer</p>
