--- a/src/sections/portfolio/portfolio.html
+++ b/src/sections/portfolio/portfolio.html
@@ -5,167 +5,10 @@
             made using modern technologies.</p>
         <div class="portfolio__list">
 
-            <div class="portfolio__wrapper">
-                <div class="portfolio__card adonis-ecommerce" data-reveal="left" data-href="adonis-ecommerce">
-                    <div class="portfolio__card-background"></div>
-                    <div class="portfolio__card-text">
-                        <h3>Adonis Ecommerce</h3>
-                        <p>FullStack e-commerce app build on Next.js/Nest.js</p>
-                    </div>
-                    <div class="portfolio__card-github" data-href="https://github.com/Gearonix/Adonis-Ecommerce">
-                            <img src="_static/images/icons/github.svg" alt="Github">
-                    </div>
-                </div>
-                <div class="portfolio__card-block" data-reveal="right">
-                    <h5 class="portfolio__card-subtitle">FullStack Project</h5>
-                    <h3 class="portfolio__card-title">Adonis Ecommerce</h3>
-                    <div class="portfolio__card-description" data-href="adonis-ecommerce">
-                        <p>
-                            <em>E-commerce platform</em> with authorization,
-                            messenger, comments and more,
-                            built on <em>Next.js/Nest.js</em>. The user can change the profile,
-                            communicate with other users in real time, add products
-                            to the cart, filter, search. The application integrates
-                            <em>Storybook</em>, <em>Jest and RTL</em>,
-                            the architecture is <em>Feature
-                            Sliced Design</em>. Be sure to check out <em>Github</em> for a
-                            complete understanding of the project!
-                        </p>
-                        <div class="portfolio__card-time">
-                             <img src="_static/images/icons/clock.svg" alt="Clock">
-                            <span>3 months</span>
-                        </div>
-                    </div>
-                    <div class="portfolio__card-tags">
-                        <span>Next.js</span>
-                        <span>Nest.js</span>
-                        <span>Typescript</span>
-                        <span>Socket.io</span>
-                        <span>Redux Toolkit</span>
-                        <span>i18n</span>
-                        <span>JWT</span>
-                        <span>Nest.js</span>
-                        <span>Storybook</span>
-                        <span>Jest</span>
-                        <span>Github Actions</span>
-                        <span>React Spring</span>
-                        <span>Material UI</span>
-                        <span>RTL</span>
-                        <span>Feature-Sliced-Design</span>
-                        <span>SCSS</span>
-                    </div>
-                    <div class="portfolio__card-icons">
-                        <div class="portfolio__card-icon" data-href="https://github.com/Gearonix/Adonis-Ecommerce">
-                            <img src="_static/images/icons/github.svg" alt="Github">
-                        </div>
-                        <div class="portfolio__card-icon" data-href="adonis-ecommerce">
-                            <img src="_static/images/icons/link.svg" alt="Portfolio">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio__wrapper to-left">
-                <div class="portfolio__card-block" data-reveal="right">
-                    <h5 class="portfolio__card-subtitle">FullStack Project</h5>
-                    <h3 class="portfolio__card-title">Space Calendar</h3>
-                    <div class="portfolio__card-description" data-href="space-calendar">
-                        <p>
-                            <em>Calendar</em> with the ability to plan your day
-                            built on <em>React.js</em>/<em>Express.js</em>.
-                            There is support for <em>two languages</em>, authorization,
-                            <em>adding tasks</em>,
-                            changing the background of tasks and the user's avatar. Beautiful
-                            animations. My first full stack project.
-                        </p>
-                        <div class="portfolio__card-time">
-                            <img src="_static/images/icons/clock.svg" alt="Clock">
-                            <span>1 month</span>
-                        </div>
-                    </div>
-                    <div class="portfolio__card-tags">
-                        <span>React.js</span>
-                        <span>Express.js</span>
-                        <span>Typescript</span>
-                        <span>i18n</span>
-                        <span>Redux Toolkit</span>
-                        <span>Styled Components</span>
-                        <span>Axios</span>
-                        <span>Material-UI</span>
-                        <span>React-Spring</span>
-                    </div>
-                    <div class="portfolio__card-icons">
-                        <div class="portfolio-card-icon" data-href="https://github.com/Gearonix/Space-Calendar">
-                            <img src="_static/images/icons/github.svg" alt="">
-                        </div>
-                        <div class="portfolio-card-icon" data-href="space-calendar">
-                            <img src="_static/images/icons/link.svg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio__card space-calendar" data-reveal="left" data-href="space-calendar">
-                    <div class="portfolio__card-background"></div>
-                    <div class="portfolio__card-text">
-                        <h3>Space Calendar</h3>
-                        <p>Calendar with the ability to plan your day.</p>
-                    </div>
-                    <div class="portfolio__card-github" data-href="https://github.com/Gearonix/Space-Calendar">
-                            <img src="_static/images/icons/github.svg" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio__wrapper">
-                <div class="portfolio__card ulbi-production" data-reveal="left" data-href="https://github.com/Gearonix/Ulbi-Production">
-                    <div class="portfolio__card-background"></div>
-                    <div class="portfolio__card-text">
-                        <h3>Ulbi Production Project</h3>
-                        <p>Project made on Timur Ulbi's course</p>
-                    </div>
-                    <div class="portfolio__card-github" data-href="https://github.com/Gearonix/Ulbi-Production">
-                        <img src="_static/images/icons/github.svg" alt="Github">
-                    </div>
-                </div>
-                <div class="portfolio__card-block" data-reveal="right">
-                    <h5 class="portfolio__card-subtitle">FullStack Project</h5>
-                    <h3 class="portfolio__card-title">Ulbi Production Project</h3>
-                    <div class="portfolio__card-description" data-href="https://github.com/Gearonix/Ulbi-Production">
-                        <p>
-                            Project made on <em>Timur Ulbi's</em>
-                            course (Advanced Frontend. In production on React).
-                            The project includes full <em>Webpack configuration</em>,
-                            CI basics, component testing,
-                                <em>refactoring</em>,
-                                babel/eslint plugins, storybook, <em>decomposition</em>
-                                    and much more!
-                        </p>
-                        <div class="portfolio__card-time">
-                            <img src="_static/images/icons/clock.svg" alt="Clock">
-                            <span>4 months</span>
-                        </div>
-                    </div>
-                    <div class="portfolio__card-tags">
-                        <span>Webpack</span>
-                        <span>Babel</span>
-                        <span>Eslint/Prettier</span>
-                        <span>React</span>
-                        <span>Redux Toolkit</span>
-                        <span>i18n</span>
-                        <span>Typescript</span>
-                        <span>Github CI</span>
-                        <span>Feature-Sliced-Design</span>
-                        <span>Ts-morph</span>
-                        <span>Vite</span>
-                        <span>SCSS</span>
-                        <span>Optimization</span>
-                        <span>Jest</span>
-                        <span>Loki</span>
-                    </div>
-                    <div class="portfolio__card-icons">
-                        <div class="portfolio__card-icon" data-href="https://github.com/Gearonix/Ulbi-Production">
-                            <img src="_static/images/icons/github.svg" alt="Github">
-                        </div>
-                    </div>
-                </div>
-            </div>
+            @@include('projects/adonis-ecommerce.html')
+            @@include('projects/code-gear.html')
+            @@include('projects/ulbi-production.html')
+            @@include('projects/space-calendar.html')
 
         </div>
         <div class="portfolio__addon-eye" data-reveal>
