--- a/src/sections/main/main.html
+++ b/src/sections/main/main.html
@@ -1,7 +1,7 @@
 
 <section class="section main" id="home" aria-label="home">
   <div class="container">
-    <img src="_static/images/gearonix.jpg" width="322" height="322" alt="Gearonix"
+    <img src="_static/images/doom_guy.jpg" width="322" height="322" alt=""
          class="main__banner" data-first-reveal="right">
     <div class="main__content">
 
