--- a/src/sections/about/about.html
+++ b/src/sections/about/about.html
@@ -6,7 +6,7 @@
 
       <h2 class="h2 section-title" data-reveal="right">
         Hello! I’m <br>
-        Egor
+        Gearonix
       </h2>
 
       <div class="wrapper has-before" data-reveal="right">
@@ -26,8 +26,11 @@
     </div>
 
     <figure class="about__banner" data-reveal="left">
+
+      <div class="img-holder has-before" style="--width: 900; --height: 600;">
         <img class="img-cover"
-             src="_static/images/person.jpg" alt="About">
+             src="_static/images/about.png" alt="About">
+      </div>
     </figure>
   </div>
 </section>
