added new projects to portfolio, updates

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       </article>
     </main>
     @@include('sections/about/about.html')
-    @@include('sections/skills/skills.html')
+<!--    @@include('sections/skills/skills.html')-->
     @@include('sections/portfolio/portfolio.html')
     @@include('sections/footer/footer.html')
     <a class="back-top-btn" data-back-top-btn data-href="#home">0%</a>
