--- a/src/sections/about/about.html
+++ b/src/sections/about/about.html
@@ -12,13 +12,11 @@
       <div class="wrapper has-before" data-reveal="right">
 
         <p class="section-text">
-          I'm a self-taught <em class="em">Front-End Developer</em> <br/>
-          located in <em class="em">Moscow</em> region. Creating scalable,<br/>
-          beautiful <em class="em">web applications</em> <br/>
+          I'm a <em class="em">Fullstack Developer</em> <br/>
+          located in <em class="em">Moscow</em>. Creating scalable,<br/>
+          beautiful <em class="em">web applications</em>, libraries <br/>
           and some other cool stuff for web with good UX and modern standards.
           <br/>
-          Use <em class="em">modern technologies</em> such as Next.js, Typescript,
-          Styled-Components and more.
         </p>
 
       </div>
