--- a/src/sections/portfolio/portfolio.html
+++ b/src/sections/portfolio/portfolio.html
@@ -1,14 +1,18 @@
 <section class="section portfolio" id="portfolio" aria-labelledby="portfolio-label">
     <div class="container">
-        <h2 class="h2 section-title" id="portfolio-label" data-reveal>My Projects</h2>
-        <p class="section-description" data-reveal>My projects are mostly large web applications <br/>
+        <h2 class="h2 section-title" id="portfolio-label" data-reveal>Portfolio</h2>
+        <p class="section-description" data-reveal>My projects are mostly large fullstack
+            applications and libraries <br/>
             made using modern technologies.</p>
         <div class="portfolio__list">
 
             @@include('projects/adonis-ecommerce.html')
+            @@include('projects/grnx-utils.html')
+            @@include('projects/pixel-playground.html')
             @@include('projects/code-gear.html')
             @@include('projects/ulbi-production.html')
             @@include('projects/space-calendar.html')
+
 
         </div>
         <div class="portfolio__addon-eye" data-reveal>
