--- a/src/sections/main/main.html
+++ b/src/sections/main/main.html
@@ -9,10 +9,11 @@
 
       <div class="wrapper h2" data-first-reveal="left">
         <strong class="strong" data-letter-effect>Frontend</strong>
-        <strong class="strong" data-letter-effect>Developer</strong>
+        <strong class="strong" data-letter-effect>Backend</strong>
+        <strong class="strong" data-letter-effect>Fullstack</strong>
       </div>
 
-      <p class="main__text" data-first-reveal="opacity">Web developer</p>
+      <p class="main__text" data-first-reveal="opacity">Fullstack developer</p>
     </div>
     <div class="main__contacts" data-first-reveal="left">
       <div class="main__contact" data-href="https://github.com/Gearonix">
