--- a/src/sections/portfolio/projects/code-gear.html
+++ b/src/sections/portfolio/projects/code-gear.html
@@ -1,6 +1,6 @@
 <div class="portfolio__wrapper to-left">
   <div class="portfolio__card-block" data-reveal="right">
-    <h5 class="portfolio__card-subtitle">FullStack Project</h5>
+    <h5 class="portfolio__card-subtitle">FullStack Project <span> [In development]</span></h5>
     <h3 class="portfolio__card-title">CodeGear Code Editor</h3>
     <div class="portfolio__card-description" data-href="https://github.com/Gearonix/CodeGear">
       <p>
@@ -44,9 +44,6 @@
     <div class="portfolio__card-text">
       <h3>CodeGear</h3>
       <p>Fast online code editor built on Preact, Nest and Nx</p>
-    </div>
-    <div class="portfolio__card-github" data-href="https://github.com/Gearonix/CodeGear">
-      <img src="_static/images/icons/github.svg" alt="Github">
     </div>
   </div>
 </div>
