--- a/src/sections/portfolio/projects/pixel-playground.html
+++ b/src/sections/portfolio/projects/pixel-playground.html
@@ -1,25 +1,25 @@
-<div class="portfolio__wrapper">
-  <div class="portfolio__card pixel-playground" data-reveal="left" data-href="https://github.com/Gearonix/vuejs-pixel-playground">
+<div class="portfolio__wrapper to-left">
+  <div class="portfolio__card pixel-playground" data-reveal="left" data-href="https://pixelplayground.pro/#/">
     <div class="portfolio__card-background"></div>
     <div class="portfolio__card-text">
       <h3>Pixel Playground</h3>
       <p>FullStack application for selling game discs</p>
     </div>
-    <div class="portfolio__card-github" data-href="https://github.com/Gearonix/vuejs-pixel-playground">
-      <img src="_static/images/icons/github.svg" alt="Github">
-    </div>
   </div>
   <div class="portfolio__card-block" data-reveal="right">
     <h5 class="portfolio__card-subtitle">FullStack Project</h5>
     <h3 class="portfolio__card-title">Pixel Playground</h3>
-    <div class="portfolio__card-description" data-href="https://github.com/Gearonix/vuejs-pixel-playground">
+    <div class="portfolio__card-description" data-href="https://pixelplayground.pro/#/">
       <p>
-        Application for selling game discs,
-        made with <em>Turborepo, Vue.js, Quasar and Fastify.</em>
+        Application for the <em>sale and delivery</em> of game discs built on
+        <em>Vue.js/Fastify/Quasar</em> The ability to buy the necessary disks,
+        pagination, <em>admin panel, balance control</em>, adaptive layout has been
+        implemented. The full scope of work can be viewed on <em>Github</em>.
+
       </p>
       <div class="portfolio__card-time">
         <img src="_static/images/icons/clock.svg" alt="Clock">
-        <span>1 month</span>
+        <span>1,5 months</span>
       </div>
     </div>
     <div class="portfolio__card-tags">
@@ -28,15 +28,18 @@
       <span>Typescript</span>
       <span>Turborepo</span>
       <span>Fastify</span>
+      <span>TailwindCSS</span>
       <span>yarn workspaces</span>
       <span>Effector</span>
       <span>Feature-Sliced-Design</span>
+      <span>Prisma</span>
+      <span>JWT</span>
     </div>
     <div class="portfolio__card-icons">
       <div class="portfolio__card-icon" data-href="https://github.com/Gearonix/vuejs-pixel-playground">
         <img src="_static/images/icons/github.svg" alt="Github">
       </div>
-      <div class="portfolio__card-icon" data-href="adonis-ecommerce">
+      <div class="portfolio__card-icon" data-href="https://pixelplayground.pro/#/">
         <img src="_static/images/icons/link.svg" alt="Portfolio">
       </div>
     </div>
