--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uzhanin Egor</title>
   <meta name="title" content="Uzhanin Egor">
-  <meta name="description" content="Web developer.">
+  <meta name="description" content="Fullstack developer">
   <link rel="shortcut icon" href="_static/favicon.ico" type='image/x-icon'>
   <link rel="stylesheet" href="_static/font/font.css">
   <link rel="stylesheet" href="_static/index.min.css">
@@ -24,7 +24,7 @@
       </article>
     </main>
     @@include('sections/about/about.html')
-<!--    @@include('sections/skills/skills.html')-->
+    @@include('sections/skills/skills.html')
     @@include('sections/portfolio/portfolio.html')
     @@include('sections/footer/footer.html')
     <a class="back-top-btn" data-back-top-btn data-href="#home">0%</a>
