--- a/src/sections/footer/footer.html
+++ b/src/sections/footer/footer.html
@@ -6,7 +6,7 @@
       <p class="section-subtitle" data-reveal>Contact me</p>
 
       <h2 class="h2 section-title" data-reveal>
-        Send me a message.
+        Send me a message
       </h2>
 
       <div class="footer__icon-wrapper" data-reveal>
@@ -14,7 +14,7 @@
           <img src="_static/images/icons/github.svg" alt=""></div>
         <div class="footer__icon" data-href="https://t.me/gearonixx">
           <img src="_static/images/icons/telegram.svg" alt=""></div>
-        <div class="footer__icon" data-href="https://wa.me/80264942003">
+        <div class="footer__icon" data-href="https://wa.me/79264942003">
           <img src="_static/images/icons/whatsapp.svg" alt=""></div>
         <div class="footer__icon" data-href="https://vk.com/id606417601">
           <img src="_static/images/icons/vk.svg" alt="">
@@ -58,7 +58,7 @@
 
       </ul>
 
-      <a class="copyright" data-href="#home">Egor Uzhanin</a>
+      <a class="copyright" data-href="#home">Uzhanin Egor</a>
     </div>
   </div>
 
