--- a/src/sections/navbar/navbar.html
+++ b/src/sections/navbar/navbar.html
@@ -19,7 +19,7 @@
         </li>
 
         <li>
-            <a data-href="#skills" class="navbar__link" data-nav-close>My Skills</a>
+            <a data-href="#skills" class="navbar__link skills" data-nav-close>My Skills</a>
         </li>
 
         <li>
@@ -31,11 +31,6 @@
         </li>
 
     </ul>
-    <p class="navbar__bottom-title">My Address</p>
-
-    <address class="navbar__bottom-text">
-        Mytishchi, Rozhdestvenskaya 3
-    </address>
     <p class="navbar__bottom-title">Contact me</p>
     <p class="navbar__bottom-text">
         <a data-href="tel:79264942003" class="navbar__contact-link">+7 926 494 2003</a>
