--- a/src/sections/portfolio/portfolio.html
+++ b/src/sections/portfolio/portfolio.html
@@ -5,14 +5,12 @@
             applications and libraries <br/>
             made using modern technologies.</p>
         <div class="portfolio__list">
-
             @@include('projects/adonis-ecommerce.html')
             @@include('projects/grnx-utils.html')
             @@include('projects/pixel-playground.html')
             @@include('projects/code-gear.html')
             @@include('projects/ulbi-production.html')
             @@include('projects/space-calendar.html')
-
 
         </div>
         <div class="portfolio__addon-eye" data-reveal>
@@ -26,6 +24,12 @@
         </div>
         <div class="portfolio__addon-guy" data-reveal>
             <img src="_static/images/people/hero-guy-4.png" alt="">
+        </div>
+        <h4 class="h4 section-title" data-reveal style="margin-top: 25px">Small projects and freelance</h4>
+        <p class="section-description" data-reveal>There are some small and commercial projects here.
+        <div class="portfolio__grid">
+            @@include('additional/forhair-shop.html')
+            @@include('additional/datacolon-ru.html')
         </div>
     </div>
 
