--- a/src/sections/portfolio/projects/code-gear.html
+++ b/src/sections/portfolio/projects/code-gear.html
@@ -1,7 +1,7 @@
 <div class="portfolio__wrapper to-left">
   <div class="portfolio__card-block" data-reveal="right">
     <h5 class="portfolio__card-subtitle">FullStack Project <span> [In development]</span></h5>
-    <h3 class="portfolio__card-title">CodeGear Code Editor</h3>
+    <h3 class="portfolio__card-title">CodeGear - Online Code Editor</h3>
     <div class="portfolio__card-description" data-href="https://github.com/Gearonix/CodeGear">
       <p>
         Online <em>code editor</em>, with the ability to run code in 10 languages,
