--- a/src/sections/skills/skills.html
+++ b/src/sections/skills/skills.html
@@ -1,72 +1,40 @@
 <section class="section skills" id="skills">
   <div class="container">
       <h2 class="h2 section-title" data-reveal>My Skills</h2>
-      <p class="section-description" data-reveal>I have been studying web development for over a year. <br/>
-          During this time I have learned a lot of technologies.</p>
       <div class="skills__wrapper">
           <div class="skills__wrapper-section">
-              <h4 class="skills__wrapper-title" data-reveal>Main Tech Stack:</h4>
+              <h4 class="skills__wrapper-title" data-reveal>💫 Frontend</h4>
               <div class="skills__wrapper-block" data-reveal>
-                  <div class="skills__wrapper-icon">React.js</div>
-                  <div class="skills__wrapper-icon">Next.js</div>
-                  <div class="skills__wrapper-icon">Typescript</div>
-                  <div class="skills__wrapper-icon">Git</div>
-                  <div class="skills__wrapper-icon">Redux</div>
-                  <div class="skills__wrapper-icon">Mobx</div>
-              </div>
-              <h4 class="skills__wrapper-title" data-reveal>Testing, Linting, Bundlers:</h4>
-              <div class="skills__wrapper-block" data-reveal>
-                  <div class="skills__wrapper-icon">Webpack</div>
-                  <div class="skills__wrapper-icon">Gulp</div>
-                  <div class="skills__wrapper-icon">Vite</div>
-                  <div class="skills__wrapper-icon">ESBuild</div>
-                  <div class="skills__wrapper-icon">Jest</div>
-                  <div class="skills__wrapper-icon">Loki</div>
-                  <div class="skills__wrapper-icon">RTL</div>
-                  <div class="skills__wrapper-icon">Storybook</div>
+                  <div class="skills__wrapper-icon">React</div>
+                  <div class="skills__wrapper-icon">NextJS</div>
                   <div class="skills__wrapper-icon">Eslint</div>
-                  <div class="skills__wrapper-icon">Stylelint</div>
                   <div class="skills__wrapper-icon">Prettier</div>
-              </div>
-              <h4 class="skills__wrapper-title" data-reveal>CSS and Stylization:</h4>
-              <div class="skills__wrapper-block" data-reveal>
+                  <div class="skills__wrapper-icon">Git</div>
+                  <div class="skills__wrapper-icon">Typescript</div>
+                  <div class="skills__wrapper-icon">Webpack</div>
+                  <div class="skills__wrapper-icon">Vite</div>
                   <div class="skills__wrapper-icon">SCSS</div>
-                  <div class="skills__wrapper-icon">LESS</div>
-                  <div class="skills__wrapper-icon">Responsive</div>
-                  <div class="skills__wrapper-icon">JSS</div>
-                  <div class="skills__wrapper-icon">Styled Comp.</div>
-                  <div class="skills__wrapper-icon">Material UI</div>
-                  <div class="skills__wrapper-icon">Ant Design</div>
-                  <div class="skills__wrapper-icon">Tailwind CSS</div>
+                  <div class="skills__wrapper-icon">CSS in JS</div>
+                  <div class="skills__wrapper-icon">TailwindCSS</div>
+                  <div class="skills__wrapper-icon">Jest</div>
+                  <div class="skills__wrapper-icon">Storybook</div>
+                  <div class="skills__wrapper-icon">Cypress</div>
               </div>
-              <h4 class="skills__wrapper-title" data-reveal>Tools / Libraries I use:</h4>
+              <h4 class="skills__wrapper-title" data-reveal>💻 Backend</h4>
               <div class="skills__wrapper-block" data-reveal>
-                  <div class="skills__wrapper-icon">Socket.io</div>
-                  <div class="skills__wrapper-icon">React Spring</div>
-                  <div class="skills__wrapper-icon">React Toastify</div>
-                  <div class="skills__wrapper-icon">Axios</div>
-                  <div class="skills__wrapper-icon">React-Oauth</div>
-                  <div class="skills__wrapper-icon">i18n</div>
-                  <div class="skills__wrapper-icon">pnpm</div>
-                  <div class="skills__wrapper-icon">yarn</div>
-              </div>
-                  <h4 class="skills__wrapper-title" data-reveal>I had experience with:</h4>
-              <div class="skills__wrapper-block" data-reveal>
-                  <div class="skills__wrapper-icon">Vue.js</div>
-                  <div class="skills__wrapper-icon">Nuxt.js</div>
-                  <div class="skills__wrapper-icon">Vue X</div>
-                  <div class="skills__wrapper-icon">Nest.js</div>
-                  <div class="skills__wrapper-icon">MongoDB</div>
+                  <div class="skills__wrapper-icon">NodeJS</div>
+                  <div class="skills__wrapper-icon">NestJS</div>
+                  <div class="skills__wrapper-icon">Microservices</div>
+                  <div class="skills__wrapper-icon">RabbitMQ</div>
+                  <div class="skills__wrapper-icon">Redis</div>
+                  <div class="skills__wrapper-icon">Linux/Ubuntu</div>
+                  <div class="skills__wrapper-icon">PostgreSQL</div>
                   <div class="skills__wrapper-icon">MySQL</div>
-                  <div class="skills__wrapper-icon">Express</div>
-                  <div class="skills__wrapper-icon">TypeORM</div>
-                  <div class="skills__wrapper-icon">Apollo</div>
-                  <div class="skills__wrapper-icon">GraphQL</div>
-                  <div class="skills__wrapper-icon">RTK Query</div>
-                  <div class="skills__wrapper-icon">WebRTC</div>
-                  <div class="skills__wrapper-icon">Nx</div>
-                  <div class="skills__wrapper-icon">PWA</div>
-                  <div class="skills__wrapper-icon">Remix</div>
+                  <div class="skills__wrapper-icon">MongoDB</div>
+                  <div class="skills__wrapper-icon">RestAPI</div>
+                  <div class="skills__wrapper-icon">Websockets</div>
+                  <div class="skills__wrapper-icon">Docker</div>
+                  <div class="skills__wrapper-icon">Docker-swarm</div>
               </div>
           </div>
           <div class="skills__wrapper-section" data-reveal>
